force-app/main/default/objects/Commission_Sales_Rep__c.object
<CustomObject>
    <description>Sales Reps for commission System</description>
    <fields>
        <fullName>Commission_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission Team</label>
        <referenceTo>Commission_Team__c</referenceTo>
        <relationshipLabel>Commission Sales Reps</relationshipLabel>
        <relationshipName>Commission_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roll_Base_Input_To_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the sales rep to roll all input to.  The Individual is thus cancelled out and their values roll to another rep.  The values stay on the team and this user Must be on the same team!</inlineHelpText>
        <label>Roll Input Base to Rep</label>
        <referenceTo>Commission_Sales_Rep__c</referenceTo>
        <relationshipLabel>Commission Sales Reps</relationshipLabel>
        <relationshipName>Commission_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sales Rep Available to Attain Commission</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commission_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Commission Sales Rep</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isActive__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Commission_Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commission Sales Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Sales Reps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>